(Dev) proper plugin view debugging

--- a/src/Plugins/SmartStore.AmazonPay/Views/Web.config
+++ b/src/Plugins/SmartStore.AmazonPay/Views/Web.config
@@ -13,7 +13,7 @@
   </appSettings>
 
   <system.web.webPages.razor>
-    <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+    <host factoryType="SmartStore.Web.Framework.Plugins.PluginRazorHostFactory, SmartStore.Web.Framework" />
     <pages pageBaseType="SmartStore.Web.Framework.Theming.WebViewPage">
       <namespaces>
         <add namespace="System.Collections.Generic"/>
@@ -22,7 +22,6 @@
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="SmartStore" />
         <add namespace="SmartStore.Web.Framework" />
