Util: extracting text from html done via HtmlAgilityPack, no regex anymore (comments, styles and scripts are correctly ignored now, too much whitespace gets truncated)

--- a/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
+++ b/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EmbeddedResource Include="Files\testdata.html" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
