--- a/src/Tests/SmartStore.Services.Tests/SmartStore.Services.Tests.csproj
+++ b/src/Tests/SmartStore.Services.Tests/SmartStore.Services.Tests.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Orders\OrderTotalCalculationServiceTests.cs" />
     <Compile Include="Payments\TestPaymentMethod.cs" />
     <Compile Include="Payments\PaymentServiceTests.cs" />
+    <Compile Include="Search\LinqCatalogSearchServiceTests.cs" />
     <Compile Include="Seo\SeoExtensionsTests.cs" />
     <Compile Include="ServiceTest.cs" />
     <Compile Include="Security\EncryptionServiceTests.cs" />
