--- a/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Theme title="Alpha" supportRTL="false" mobileTheme="false" previewText="The 'Alpha' theme" author="SmartStore AG" version="1.0">
+<Theme title="Alpha" supportRTL="false" previewText="The 'Alpha' theme" author="SmartStore AG" version="1.0">
 
   <Vars>
     <!-- Common Colors -->
