Theming engine handles SASS files now: ThemeVars, ModuleImports (new!) etc.

--- a/src/Plugins/SmartStore.FacebookAuth/SmartStore.FacebookAuth.csproj
+++ b/src/Plugins/SmartStore.FacebookAuth/SmartStore.FacebookAuth.csproj
@@ -209,9 +209,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\facebookstyles.css">
+    <None Include="Content\public.scss">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
     <Content Include="Description.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
