--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -186,19 +186,17 @@
     <Compile Include="ComponentModel\TypeConversion\TypeConverterAdapter.cs" />
     <Compile Include="ComponentModel\TypeConversion\TypeConverterBase.cs" />
     <Compile Include="ComponentModel\TypeConversion\TypeConverterFactory.cs" />
-    <Compile Include="Data\Hooks\DefaultHookHandler.cs" />
     <Compile Include="Data\Hooks\HookableAttribute.cs" />
     <Compile Include="Data\Hooks\HookMetadata.cs" />
-    <Compile Include="Data\Hooks\IHookHandler.cs" />
     <Compile Include="Data\Hooks\ImportantAttribute.cs" />
-    <Compile Include="Data\Hooks\New\DbLoadHook.cs" />
-    <Compile Include="Data\Hooks\New\DbSaveHook.cs" />
-    <Compile Include="Data\Hooks\New\DefaultDbHookHandler.cs" />
-    <Compile Include="Data\Hooks\New\HookedEntity.cs" />
-    <Compile Include="Data\Hooks\New\IDbHook.cs" />
-    <Compile Include="Data\Hooks\New\IDbLoadHook.cs" />
-    <Compile Include="Data\Hooks\New\IDbSaveHook.cs" />
-    <Compile Include="Data\Hooks\New\IDbHookHandler.cs" />
+    <Compile Include="Data\Hooks\DbLoadHook.cs" />
+    <Compile Include="Data\Hooks\DbSaveHook.cs" />
+    <Compile Include="Data\Hooks\DefaultDbHookHandler.cs" />
+    <Compile Include="Data\Hooks\HookedEntity.cs" />
+    <Compile Include="Data\Hooks\IDbHook.cs" />
+    <Compile Include="Data\Hooks\IDbLoadHook.cs" />
+    <Compile Include="Data\Hooks\IDbSaveHook.cs" />
+    <Compile Include="Data\Hooks\IDbHookHandler.cs" />
     <Compile Include="Data\IDbContextExtensions.cs" />
     <Compile Include="Data\ITransaction.cs" />
     <Compile Include="Domain\Catalog\PriceDisplayType.cs" />
@@ -247,6 +245,7 @@
     <Compile Include="IO\LockFile\ILockFileManager.cs" />
     <Compile Include="IO\LockFile\LockFile.cs" />
     <Compile Include="IO\LockFile\LockFileManager.cs" />
+    <Compile Include="IAuditable.cs" />
     <Compile Include="ITransient.cs" />
     <Compile Include="Collections\MostRecentlyUsedList.cs" />
     <Compile Include="Localization\LocalizationHelper.cs" />
@@ -271,11 +270,6 @@
     <Compile Include="Data\DbContextScope.cs" />
     <Compile Include="Data\DbQuerySettings.cs" />
     <Compile Include="Data\EntityState.cs" />
-    <Compile Include="Data\Hooks\HookedEntityEntry.cs" />
-    <Compile Include="Data\Hooks\HookEntityMetadata.cs" />
-    <Compile Include="Data\Hooks\IHook.cs" />
-    <Compile Include="Data\Hooks\PostActionHook.cs" />
-    <Compile Include="Data\Hooks\PreActionHook.cs" />
     <Compile Include="Data\IDbContext.cs" />
     <Compile Include="Data\RepositoryExtensions.cs" />
     <Compile Include="Data\SqlFileTokenizer.cs" />
