--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -40,14 +40,15 @@
     <add key="sm:ClearPluginsShadowDirectoryOnStartup" value="false" />
     <add key="sm:TempDirectory" value="~/App_Data/_temp" />
     <!--
-      Storage path for media files and assets like pictures, thumbs, uploads, email attachments etc.
+      Storage path for media files and assets like thumbs, uploads, email attachments etc.
       Must be either an app local relative path or a fully qualified physical path to a shared location. E.g.:
         - "Media" or "/Media" points to the subfolder named "Media" in your application root
         - "F:\SharedMedia" points to a (mapped network) drive
         - "\\Server1\SharedMedia" points to a network drive.
+      Leave empty if path should be "/Media/Default".
       In web farms, you should specify the same UNC or mapped network drive on each server.
     -->
-    <add key="sm:MediaStoragePath" value="/Media" />
+    <add key="sm:MediaStoragePath" value="" />
     <!-- 
       Public base path to the media storage used to generate URLs for output HTML. 
       Leave empty if "sm:MediaStoragePath" is an app local relative path, OR:
