--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -715,6 +715,7 @@
     <Content Include="Content\Images\smartstore.net-200-black.png" />
     <Content Include="Content\Images\smartstore.net-200-white.png" />
     <Content Include="Content\install\images\bg.png" />
+    <Content Include="Content\placeholder.txt" />
     <Content Include="Content\print.css" />
     <Content Include="Content\samples\0000740-antonio-vivaldi-der-fruhling-100.jpg" />
     <Content Include="Content\samples\0000785-apple-iphone.png" />
@@ -806,7 +807,6 @@
     <Content Include="Content\install\variables.less" />
     <Content Include="Content\bootstrap\custom\colorpicker.less" />
     <Content Include="favicon.readme.txt" />
-    <Content Include="Media\Uploaded\placeholder.txt" />
     <Content Include="Refresh.html" />
     <Content Include="Scripts\2012.2.607\jquery-1.7.1.min.js" />
     <Content Include="Scripts\2012.2.607\telerik.calendar.min.js" />
@@ -823,7 +823,6 @@
     <Content Include="Scripts\2012.2.607\telerik.textbox.min.js" />
     <Content Include="Scripts\2012.2.607\telerik.treeview.min.js" />
     <Content Include="Content\bootstrap\custom\spinner.less" />
-    <Content Include="Media\Thumbs\placeholder.txt" />
     <Content Include="Config\ConnectionStrings.config" />
     <Content Include="Config\SessionState.config" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
@@ -2389,7 +2388,7 @@
     <Copy SourceFiles="@(ClearScriptV8Nativex64)" DestinationFolder="$(OutputPath)\amd64\%(RecursiveDir)" SkipUnchangedFiles="true" />
   </Target>
   <PropertyGroup>
-    <PlaceholderFile>$(ProjectDir)Media\Thumbs\placeholder.txt</PlaceholderFile>
+    <PlaceholderFile>$(ProjectDir)Content\placeholder.txt</PlaceholderFile>
   </PropertyGroup>
   <Target Name="CreateEmptyFolders">
     <Copy SourceFiles="$(PlaceholderFile)" DestinationFolder="$(ProjectDir)Plugins\bin\" ContinueOnError="true" SkipUnchangedFiles="true" />
