Added sass version of animate

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -987,6 +987,85 @@
     <Content Include="Themes\Alpha\Content\images\star-on.png" />
     <Content Include="Themes\Alpha\Content\compiled\theme.css" />
     <Content Include="Themes\Alpha\Content\shared\img\grippy.png" />
+    <Content Include="Themes\Alpha\Content\animate\_animate.scss" />
+    <Content Include="Themes\Alpha\Content\animate\helpers\_base.scss" />
+    <Content Include="Themes\Alpha\Content\animate\helpers\_mixins.scss" />
+    <Content Include="Themes\Alpha\Content\animate\helpers\_settings.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\attention-seekers\_bounce.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\attention-seekers\_flash.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\attention-seekers\_pulse.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\attention-seekers\_shake.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\attention-seekers\_swing.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\attention-seekers\_tada.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\attention-seekers\_wiggle.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\attention-seekers\_wobble.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\bounce-enter\_bounceIn.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\bounce-enter\_bounceInDown.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\bounce-enter\_bounceInLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\bounce-enter\_bounceInRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\bounce-enter\_bounceInUp.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\bounce-exit\_bounceOut.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\bounce-exit\_bounceOutDown.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\bounce-exit\_bounceOutLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\bounce-exit\_bounceOutRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\bounce-exit\_bounceOutUp.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-enter\_fadeIn.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-enter\_fadeInDown.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-enter\_fadeInDownBig.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-enter\_fadeInLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-enter\_fadeInLeftBig.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-enter\_fadeInRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-enter\_fadeInRightBig.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-enter\_fadeInUp.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-enter\_fadeInUpBig.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-exit\_fadeOut.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-exit\_fadeOutDown.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-exit\_fadeOutDownBig.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-exit\_fadeOutLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-exit\_fadeOutLeftBig.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-exit\_fadeOutRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-exit\_fadeOutRightBig.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-exit\_fadeOutUp.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\fade-exit\_fadeOutUpBig.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\flippers\_flip.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\flippers\_flipInX.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\flippers\_flipInY.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\flippers\_flipOutX.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\flippers\_flipOutY.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\lightspeed\_lightSpeedIn.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\lightspeed\_lightSpeedOut.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\rotate-enter\_rotateIn.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\rotate-enter\_rotateInDownLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\rotate-enter\_rotateInDownRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\rotate-enter\_rotateInUpLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\rotate-enter\_rotateInUpRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\rotate-exit\_rotateOut.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\rotate-exit\_rotateOutDownLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\rotate-exit\_rotateOutDownRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\rotate-exit\_rotateOutUpLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\rotate-exit\_rotateOutUpRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\slide-enter\_slideInDown.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\slide-enter\_slideInLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\slide-enter\_slideInRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\slide-enter\_slideInUp.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\slide-exit\_slideOutDown.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\slide-exit\_slideOutLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\slide-exit\_slideOutRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\slide-exit\_slideOutUp.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\special\_hinge.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\special\_rollIn.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\special\_rollOut.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\zoom-enter\_zoomIn.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\zoom-enter\_zoomInDown.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\zoom-enter\_zoomInLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\zoom-enter\_zoomInRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\zoom-enter\_zoomInUp.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\zoom-exit\_zoomOut.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\zoom-exit\_zoomOutDown.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\zoom-exit\_zoomOutLeft.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\zoom-exit\_zoomOutRight.scss" />
+    <Content Include="Themes\Alpha\Content\animate\animations\zoom-exit\_zoomOutUp.scss" />
+    <Content Include="Themes\Alpha\Content\shared\_animate.scss" />
     <None Include="Themes\Alpha\Content\_megamenu.scss" />
     <Content Include="Themes\Alpha\preview.png" />
     <Content Include="Themes\AlphaOld\Content\images\color-overlay.png" />
