--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -435,6 +435,10 @@
     <Compile Include="Migrations\201609281549565_CategoryBadges.Designer.cs">
       <DependentUpon>201609281549565_CategoryBadges.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611261017137_Search.cs" />
+    <Compile Include="Migrations\201611261017137_Search.Designer.cs">
+      <DependentUpon>201611261017137_Search.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -798,6 +802,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609281549565_CategoryBadges.resx">
       <DependentUpon>201609281549565_CategoryBadges.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611261017137_Search.resx">
+      <DependentUpon>201611261017137_Search.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
