--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -84,6 +84,7 @@
       <siteMapNode id="settings" iconClass="sliders" title="Settings" resKey="Admin.Configuration.Settings" permissionNames="ManageSettings">
         <siteMapNode id="general-settings" title="General and common settings" resKey="Admin.Configuration.Settings.GeneralCommon" controller="Setting" action="GeneralCommon" area="Admin" />
         <siteMapNode id="catalog-settings" title="Catalog settings" resKey="Admin.Configuration.Settings.Catalog" controller="Setting" action="Catalog" area="Admin" />
+        <siteMapNode id="search-settings" title="Search settings" resKey="Search.Title" controller="Setting" action="Search" area="Admin" />
         <siteMapNode id="customer-settings" title="Customer and user settings" resKey="Admin.Configuration.Settings.CustomerUser" controller="Setting" action="CustomerUser" area="Admin" />
         <siteMapNode id="cart-settings" title="Shopping cart settings" resKey="Admin.Configuration.Settings.ShoppingCart" controller="Setting" action="ShoppingCart" area="Admin"/>
         <siteMapNode id="order-settings" title="Order settings" resKey="Admin.Configuration.Settings.Order" controller="Setting" action="Order" area="Admin" />
