--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1871,25 +1871,25 @@
     <Content Include="Themes\Alpha\Views\Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Views\Shared\_ColumnsOne.cshtml" />
-    <Content Include="Views\Shared\_ColumnsThree.cshtml" />
-    <Content Include="Views\Shared\_ColumnsTwo.cshtml" />
-    <Content Include="Views\Shared\_Document.cshtml" />
-    <Content Include="Views\Shared\ConditionalComments.cshtml" />
+    <Content Include="Views\Shared\Layouts\_ColumnsOne.cshtml" />
+    <Content Include="Views\Shared\Layouts\_ColumnsThree.cshtml" />
+    <Content Include="Views\Shared\Layouts\_ColumnsTwo.cshtml" />
+    <Content Include="Views\Shared\Layouts\_Document.cshtml" />
+    <Content Include="Views\Shared\Partials\ConditionalComments.cshtml" />
     <Content Include="Themes\Alpha\Views\Shared\ConfigureTheme.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\LanguageAttributes.cshtml" />
+    <Content Include="Views\Shared\Partials\LanguageAttributes.cshtml" />
     <Content Include="Views\Shared\LicenseRequired.cshtml" />
     <Content Include="Views\Shared\NotFound.cshtml" />
-    <Content Include="Views\Shared\_Checkout.cshtml" />
-    <Content Include="Views\Shared\_ClientRes.cshtml" />
-    <Content Include="Views\Shared\_CreateOrUpdateAddress.cshtml" />
-    <Content Include="Views\Shared\_Notifications.cshtml" />
-    <Content Include="Views\Shared\_Print.cshtml" />
-    <Content Include="Views\Shared\_ProductBox.cshtml" />
-    <Content Include="Views\Shared\_ProductBoxCompact.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Shared\_Layout.Popup.cshtml" />
+    <Content Include="Views\Shared\Layouts\_Checkout.cshtml" />
+    <Content Include="Views\Shared\Partials\_ClientRes.cshtml" />
+    <Content Include="Views\Shared\Partials\_CreateOrUpdateAddress.cshtml" />
+    <Content Include="Views\Shared\Partials\_Notifications.cshtml" />
+    <Content Include="Views\Shared\Layouts\_Print.cshtml" />
+    <Content Include="Views\Shared\Partials\_ProductBox.cshtml" />
+    <Content Include="Views\Shared\Partials\_ProductBoxCompact.cshtml" />
+    <Content Include="Views\Shared\Layouts\_Layout.cshtml" />
+    <Content Include="Views\Shared\Layouts\_Layout.Popup.cshtml" />
     <Content Include="Views\Blog\BlogMonths.cshtml" />
     <Content Include="Views\Blog\BlogPost.cshtml" />
     <Content Include="Views\Blog\BlogTags.cshtml" />
@@ -1938,7 +1938,7 @@
     <Content Include="Views\Catalog\_FilterPriceBox.cshtml" />
     <Content Include="Views\Catalog\_FilterSpecsBox.cshtml" />
     <Content Include="Views\Catalog\_ProductBoxList.cshtml" />
-    <Content Include="Views\Shared\_ProductListOptions.cshtml" />
+    <Content Include="Views\Shared\Partials\_ProductListOptions.cshtml" />
     <Content Include="Views\Checkout\BillingAddress.cshtml" />
     <Content Include="Views\Checkout\CheckoutProgress.cshtml" />
     <Content Include="Views\Checkout\Completed.cshtml" />
@@ -2070,13 +2070,13 @@
     <Content Include="Views\Topic\TopicWidget.cshtml" />
     <Content Include="Views\Widget\TabWidgets.cshtml" />
     <Content Include="Views\Widget\WidgetsByZone.cshtml" />
-    <Content Include="Views\Shared\_GoogleFonts.cshtml" />
+    <Content Include="Views\Shared\Partials\_GoogleFonts.cshtml" />
     <Content Include="Themes\Alpha\Content\_checkout.scss" />
     <None Include="Themes\Alpha\Content\_footer.scss" />
     <Content Include="Themes\Alpha\Content\_misc.scss" />
     <None Include="Themes\Alpha\Content\_blog.scss" />
     <Content Include="Themes\Alpha\Content\_forum.scss" />
-    <Content Include="Views\Shared\_ProductList.cshtml" />
+    <Content Include="Views\Shared\Partials\_ProductList.cshtml" />
     <Content Include="Themes\Alpha\Content\_product.scss" />
     <None Include="Themes\Alpha\Content\_pages.scss" />
     <Content Include="Themes\Alpha\Content\_rating.scss" />
@@ -2101,8 +2101,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Themes\Alpha\Content\shared\select2\mixins\" />
-    <Folder Include="Views\Shared\Layouts\" />
-    <Folder Include="Views\Shared\Partials\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\SmartStore.Core\SmartStore.Core.csproj">
@@ -2136,7 +2134,7 @@
     <Content Include="Themes\AlphaOld\Views\Shared\_ProductBox.cshtml" />
     <Content Include="Themes\AlphaOld\Views\Home\Index.cshtml" />
     <Content Include="Themes\AlphaOld\Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\Head.cshtml" />
+    <Content Include="Views\Shared\Partials\Head.cshtml" />
     <Content Include="Themes\AlphaOld\Views\Shared\_ColumnsOne.cshtml" />
     <Content Include="Themes\AlphaOld\Views\Shared\_ColumnsThree.cshtml" />
     <Content Include="Themes\AlphaOld\Views\Shared\_ColumnsTwo.cshtml" />
