Theming: product list

--- a/src/Presentation/SmartStore.Web/Administration/Views/Web.config
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="SmartStore" />
+        <add namespace="SmartStore.Utilities" />
         <add namespace="SmartStore.Admin.Extensions" />
         <add namespace="SmartStore.Admin.Models.Affiliates" />
         <add namespace="SmartStore.Admin.Models.Blogs" />
