--- a/src/Presentation/SmartStore.Web/Views/Web.config
+++ b/src/Presentation/SmartStore.Web/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
         <add namespace="SmartStore" />
+        <add namespace="SmartStore.Utilities" />
         <add namespace="SmartStore.Web.Framework" />
         <add namespace="SmartStore.Web.Framework.UI" />
         <add namespace="SmartStore.Web.Framework.UI.Captcha" />
