--- a/src/Presentation/SmartStore.Web/Administration/Views/Web.config
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Web.config
@@ -47,6 +47,7 @@
         <add namespace="SmartStore.Admin.Models.Tasks" />
         <add namespace="SmartStore.Admin.Models.Tax" />
         <add namespace="SmartStore.Admin.Models.Topics" />
+        <add namespace="SmartStore.Core" />
         <add namespace="SmartStore.Core.Events" />
         <add namespace="SmartStore.Core.Infrastructure" />
         <add namespace="SmartStore.Web.Framework" />
