--- a/src/Presentation/SmartStore.Web/Views/Web.config
+++ b/src/Presentation/SmartStore.Web/Views/Web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
         <add namespace="SmartStore" />
+        <add namespace="SmartStore.Core" />
+        <add namespace="SmartStore.Core.Infrastructure" />
         <add namespace="SmartStore.Utilities" />
         <add namespace="SmartStore.Web.Framework" />
         <add namespace="SmartStore.Web.Framework.UI" />
